--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Currency Converter App in JavaScript | CodingNepal</title>
+    <title>Currency Converterin Java Script</title>
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- FontAweome CDN Link for Icons -->
@@ -28,7 +28,7 @@
           <div class="to">
             <p>To</p>
             <div class="select-box">
-              <img src="https://www.countryflags.io/np/flat/48.png" alt="flag">
+              <img src="https://www.countryflags.io/ca/flat/48.png" alt="flag">
               <select> <!-- Options tag are inserted from JavaScript --> </select>
             </div>
           </div>
